--- a/angular.json
+++ b/angular.json
@@ -91,10 +91,11 @@
               }
             ],
             "styles": [
-              "src/styles.scss",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "/node_modules/primeflex/primeflex.css"
+              "node_modules/primeflex/primeflex.scss",
+              "node_modules/primeflex/themes/primeone-light.css",
+              "src/styles.scss"
             ],
             "scripts": []
           }
