--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@fontsource/inter": "^5.1.0",
     "primeflex": "^3.3.1",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
