--- a/angular.json
+++ b/angular.json
@@ -96,6 +96,7 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.scss",
               "node_modules/primeflex/themes/primeone-light.css",
+              "node_modules/primeicons/primeicons.css",
               "src/styles.scss"
             ],
             "scripts": []
